opam-version: "2.0"
version: "dev"

maintainer: "dev@clarus.me"
authors: ["Guillaume Claret <dev@clarus.me>"]
homepage: "https://github.com/clarus/smart-print"
bug-reports: "https://github.com/clarus/smart-print/issues"
license: "BSD-3-Clause"

depends: [
  "ocaml" {>= "4.00.0"}
  "dune" {>= "2.0"}
  "odoc" {with-doc}
]
build: make
dev-repo: "git://github.com/clarus/smart-print"
install: [make "install"]
synopsis: "A pretty-printing library in OCaml"
