opam-version: "2.0"
version: "dev"

maintainer: "dev@clarus.me"
authors: ["Guillaume Claret <dev@clarus.me>"]
homepage: "https://github.com/clarus/smart-print"
bug-reports: "https://github.com/clarus/smart-print/issues"
license: "BSD-3-Clause"

depends: [
  "dune" {>= "2.0"}
  "ocaml" {>= "4.00.0"}
  "odoc" {with-doc}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git://github.com/clarus/smart-print"
synopsis: "A pretty-printing library in OCaml"
